syntax = "proto3";
package proton;

import "github.com/coreos/etcd/raft/raftpb/raft.proto";
import weak "gogoproto/gogo.proto";

service Raft {
  rpc JoinRaft(NodeInfo) returns (JoinRaftResponse) {}
  rpc LeaveRaft(NodeInfo) returns (LeaveRaftResponse) {}
  rpc Send(raftpb.Message) returns (SendResponse) {}

  rpc PutObject(PutObjectRequest) returns (PutObjectResponse) {}
  rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {}
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse) {}
}

message JoinRaftResponse {
  bool success = 1;
  string error = 2;
  repeated NodeInfo nodes = 3;
}

message LeaveRaftResponse {
  bool success = 1;
  string error = 2;
}

message SendResponse {
  bool success = 1;
  string error = 2;
}

message PutObjectRequest {
  Pair object = 1;
}

message PutObjectResponse {
  bool success = 1;
  string error = 2;
}

message ListObjectsRequest {}

message ListObjectsResponse {
  repeated Pair objects = 1;
}

message ListMembersRequest {}

message ListMembersResponse {
  repeated NodeInfo members = 1;
}

message NodeInfo {
  uint64 ID = 1;
  string Addr = 2;
  string Port = 3;
  string Error = 4;
}

message Pair {
  string key = 1;
  bytes value = 2;
}
